--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"astro": "astro"
 	},
 	"dependencies": {
+		"@astrojs/cloudflare": "^6.1.3",
 		"@astrojs/react": "^2.0.2",
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
